--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Secret</string>
+    <string name="changeLanguage">change language</string>
 
     <string name="phone">phone</string>
     <string name="password">password</string>
