--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Secret</string>
-    <string name="changeLanguage">change language</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 
     <string name="phone">phone</string>
     <string name="password">password</string>
