--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -29,10 +29,14 @@
     <string name="loadingComments">正在获取评论内容</string>
     <string name="loadingCommentsPleaseWait">正在获取评论内容，请等待...</string>
     <string name="sendingComment">正在发表评论</string>
-    <string name="sendingCommentPleaseWait">正在获取评论内容，请等待...</string>
+    <string name="sendingCommentPleaseWait">正在发表评论内容，请等待...</string>
     <string name="logining">正在登陆</string>
     <string name="loginingPleaseWait">正在登陆，请等待...</string>
     <string name="getMessagesFail">获取消息内容失败</string>
     <string name="loadingMessage">正在获取消息</string>
     <string name="loadingMessagePleaseWait">正在获取消息，请等待...</string>
+    <string name="loadHtml5View">加载html5页面</string>
+    <string name="loadAnimation">加载动画</string>
+    <string name="removeLoadAnimation">取消加载动画</string>
+    <string name="connectTimeOut">请求超时</string>
 </resources>
